// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
option go_package = "./proto";
package datacommons.v1;

message BioPageRequest {
  string node = 1;
}

message PlacePageRequest {
  string node = 1;
  // A list of additional stat vars need to be fetched in addition to the
  // data in cache. This is to be used in local development, where new chart is
  // added to chart config but data is not added to cache (delay from cache
  // build).
  repeated string new_stat_vars = 2;
  // Seed value for random selection. Used by test to get deterministic result.
  int64 seed = 3;
  // The category for which data needs to be fetched.
  string category = 4;
}
